# C_code

./: 26年3月份.md  26年4月份.md  26年5月 ==与chat沟通，5小时VibeCoding==.md  26年5月份：5月1日，复习C++和理解释项目算法.md  C++_26_3_9_第二次课.sln  C++_26_6_1_实验13.sln  C++_第四次课_26_3_23.sln  Concurrent_Memory_Pool.sln  DEV_Config.c  README.md  二维前缀和.cpp  学习方法.md  实习生成长导航_20名实习生_CloudBaseSeed_V0.1.json  实验六.sln  封闭图形.cpp  期中模拟.cpp.sln  职业探索感悟.md  计组概念解释和简答.md  面试自答.md
1.C++基础/: 1.命名空间.md  2.IO输出流.md  3.缺省值.md  4.函数重载.md  5.引用.md  6.const引用.md
26_4_13_C++_实验六/: 26_4_13_C++_实验六.sln
Bedside_Assistant/: CMakeLists.txt  使用说明.md
C++_26_6_1_实验13/: C++_26_6_1_实验13.vcxproj
C语言_25_10_11/: C语言_25_10_11.sln
C语言_25_8_23/: C语言_25_8_23.sln
C语言_25_8_25/: C语言_25_8_25.vcxproj  C语言_25_8_25.vcxproj.filters  X型图案.c  二维数组初始化.c
C语言_25_8_26/: C语言_25_8_26.sln
C语言_25_8_27/: C语言_25_8_27.sln
C语言_25_8_31/: C语言_25_8_31.sln
C语言_7_31/: 分数求和.c  判断大小.c  (+3 more)
main/: CMakeLists.txt  Kconfig.projbuild  app_fs.c  app_fs.h  edge_agent_version.c  edge_agent_version.h  idf_component.yml  main.c  pin_config.h
main/BLE/: CMakeLists.txt  ble_terminal.c  ble_terminal.h  ble_terminal_test.c
main/EPD/: EPD.c  EPD.h
main/INMP441/: CMakeLists.txt  audio_input.c  audio_input.h  audio_test.c
main/IO/: pin_config.h
main/IR/: ir_tx.c  ir_tx.h
main/PROTOCOL/: terminal_protocol.c
main/SHT31/: CMakeLists.txt  SHT31.c  SHT31.h
main/display/: CMakeLists.txt  display_font.c  display_font.h  display_page.c  display_page.h  display_service.c  display_service.h  display_test.c
main/r05d_ir_test_bundle_fixed/: CMakeLists.txt  README.md
(+968 files in other folders)
